<resources>
    <string name="app_name">Weather App</string>
    <string name="city_name">St Paul, MN</string>
    <string name="current_temp">%d°</string>
    <string name="feels_like">Feels like: 78</string>
    <string name="low_temp">Low: %d°</string>
    <string name="high_temp">High: %d°</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="pressure">Pressure: %dhPa</string>
    <string name="forecast">Forecast</string>
    <string name="degree">%d°</string>
    <string name="forecast_high_temp">High: %d°</string>
    <string name="forecast_low_temp">Low: %d°</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="forecast_humidity">Humidity: %d%%</string>
    <string name="forecast_pressure">Pressure: %dhPa</string>
    <string name="temperature">%s°</string>
    <string name="get_weather">Get Weather for My Location</string>
</resources>